tests/integration/fail/infinite_loops/x_eq_x.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::InfiniteRecursion'
{ x = x }.x